# nptool_ASGARD

./: README.md
Inputs/CrossSection/: 110Sn_dp_111Sn_10MeVu_112_979keV_An_Koning.txt  110Sn_dp_111Sn_10MeVu_12_255keV_An_Koning.txt  110Sn_dp_111Sn_10MeVu_32_644keV_An_Koning.txt  110Sn_dp_111Sn_10MeVu_52_154keV_An_Koning.txt  110Sn_dp_111Sn_10MeVu_72_0keV_An_Koning.txt  110Sn_dp_111Sn_6MeVu_112_979keV_An_Koning.txt  110Sn_dp_111Sn_6MeVu_12_255keV_An_Koning.txt  110Sn_dp_111Sn_6MeVu_32_644keV_An_Koning.txt  110Sn_dp_111Sn_6MeVu_52_154keV_An_Koning.txt  110Sn_dp_111Sn_6MeVu_72_0keV_An_Koning.txt  110Sn_dp_111Sn_8MeVu_112_979keV_An_Koning.txt  110Sn_dp_111Sn_8MeVu_12_1107keV_An_Koning.txt  110Sn_dp_111Sn_8MeVu_12_255keV_An_Koning.txt  110Sn_dp_111Sn_8MeVu_32_644keV_An_Koning.txt  110Sn_dp_111Sn_8MeVu_52_154keV_An_Koning.txt  110Sn_dp_111Sn_8MeVu_52_755keV_An_Koning.txt  110Sn_dp_111Sn_8MeVu_72_0keV_An_Koning.txt  exportCsxToNPTool_110Sn_dp.sh
Inputs/DetectorConfiguration/: ASGARD.detector  ASGARD.detector~  ASGARD_STARKjr.detector  ASGARD_STARKjr.detector~  ASGARD_STARKjr_140mm.detector  ASGARD_STARKjr_140mm.detector~  ASGARD_STARKjr_thinTarget.detector  ASGARD_full_STARKjr.detector  ASGARD_full_STARKjr.detector~  FAUST.detector  FAUST.detector~  Fatima.detector  Fatima_single.detector  IDATEN.detector  IDATEN.detector.backup  IDATEN72.detector  IDATEN_HPGe.detector_before220801  IDATEN_HPGe_MaCi.detector  IDATEN_HPGe_MaCi_commissioning.detector  IDATEN_HPGe_MaCi_commissioning.detector~  IDATEN_HPGe_MagnetAssembly.detector  IDATEN_HPGe_MagnetAssembly_extended.detector  IDATEN_HPGe_WAS3ABi_plastic.detector  IDATEN_HPGe_passive.detector  IDATEN_HPGe_passive_plastic.detector  IDATEN_HPGe_plastic.detector  Khala_2024MS_passive_2mm.detector  Khala_single.detector  MUST2.detector  (+25 more)
NPLib/Detectors/ASGARD/: CMakeLists.txt  CMakeLists.txt~  Makefile~  TASGARDData.cxx  TASGARDData.cxx~  TASGARDData.h  TASGARDData.h~  TASGARDPhysics.cxx  TASGARDPhysics.cxx~  TASGARDPhysics.h
NPLib/Detectors/STARK/: CMakeLists.txt  TSTARKData.cxx  TSTARKData.h  TSTARKPhysics.cxx  TSTARKPhysics.h  TSTARKRaw.cxx  TSTARKRaw.h
NPLib/Detectors/STARKjr/: ._TSTARKjrData.cxx  CMakeList_backup.txt  CMakeLists.txt  TSTARKjrData.cxx  TSTARKjrData.h  TSTARKjrPhysics.cxx  TSTARKjrPhysics.h  TSTARKjrRaw.cxx  TSTARKjrRaw.h
NPLib/Detectors/WAS3ABi/: CMakeLists.txt  TWAS3ABiData.cxx  TWAS3ABiData.h  TWAS3ABiPhysics.cxx  TWAS3ABiPhysics.h  TWAS3ABiSpectra.cxx  TWAS3ABiSpectra.h
NPSimulation/: 100In_decay.mac~  104Sn_isomer.mac~  105Te_decay.mac~  107Te_decay.mac~  128Cd_isomer.mac~  130Cd_isomer.mac~  150Cs_decay.mac~  60Co_source.mac~  95Ag_decay.mac~  95Cd_12_isomer.mac~  95Cd_232_isomer.mac~  95Cd_332_isomer.mac~  96Cd_isomer.mac~  97Ag_decay.mac~  98Cd_decay.mac~  98Cd_isomer.mac~  99In_decay.mac~  PhysicsListOption.txt~  asgard_starkjr_commands.txt  asgard_starkjr_commands.txt~  blank.txt  idaten_100Sn.mac~  idaten_100k_events.mac~  idaten_100k_events_template.mac~  idaten_128Cd.mac~  idaten_130Cd.mac~  idaten_152Eu.mac~  idaten_160Sm.mac~  idaten_96Cd.mac~  idaten_96Pd.mac~  idaten_96Pd_template.mac~  idaten_command.txt~  idaten_commands.txt  idaten_commands.txt~  miniball_command.txt  miniball_command.txt~  run_148Cs.sh~  run_idaten_94Pd_14plus_seeds_node2.sh~  run_idaten_94Ru_seeds_node1.sh~  run_idaten_96Pd_seeds.sh~  (+6 more)
(+323 files in other folders)
